fixed up the footer but still figuring out why the order isnt right. Also fixed the spacing at the bottom on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -425,7 +425,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   max-height: 100%;
-  height: 600px;
+  height: 700px;
 }
 /* -------------------------------- TopMenu -------------------------------- */
 #menuContainer {
@@ -438,14 +438,19 @@
   font-size: 25px;
   padding-left: 0.5em;
   max-height: auto;
+  max-width: 200px;
+}
+
+#topMenuTextContainer {
+  display: flex;
+  flex-direction: column-reverse;
+  padding-right: 1em;
 }
 
 .topMenuText {
-  display: flex;
-  flex-direction: column;
   float: none;
-  font-size: 14px;
-  padding: 0.3em 0.5em 0 0;
+  font-size: 15px;
+  padding: 0.5em 0.5em 0 0;
 }
 /* ------------------------------------------------------------------------- */
 
@@ -486,38 +491,23 @@
 
 /* ---------------------------- Contact Us Page ---------------------------- */
 #contactUsContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background-color: white;
-  width: 90%;
-  margin: 0 auto;
-  z-index: 1;
-  position: relative;
   top: 5.25em;
-  margin-bottom: 5em;
+  margin-bottom: 0em;
 }
 
 #contactUsSubContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   padding: 20px;
 }
 
 #contactForm {
-padding-bottom: 10px;
+  padding-bottom: 10px;
 }
 
 #contactTitleContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+
 }
 
 #contactUsTitle {
-  display: flex;
-  justify-content: center;
   font-size: 15px;
   padding-top: 2em;
   max-width: 85%;
@@ -552,7 +542,6 @@ padding-bottom: 10px;
 }
 
 #contactSubmit {
-
   font-size: 15px;
 }
 /* ------------------------------------------------------------------------- */
@@ -647,11 +636,25 @@ padding-bottom: 10px;
 }
 
 #footerTitle {
-
+  float: left;
+  color: white;
+  font-size: 15px;
+  padding-left: 0.5em;
 }
 
-.topMenuText {
+#footerNavContainer {
+  display: flex;
+  flex-flow: wrap-reverse;
+  float: right;
+  max-height: 50px;
+  width: 100px;
+  padding-right: 0.4em;
+}
 
+.footerText {
+  font-size: 10px;
+  color: white;
+  padding-right: 0.5em;
 }
 /* ------------------------------------------------------------------------- */
 
